[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/buttons/bt3_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/main_font_44.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/slkscr.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/UI/Scripts/SettingsScene.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/buttons/bt3_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/main_font_36.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/images/slider_thing.png" type="Texture" id=7]
[ext_resource path="res://assets/images/slider_bg.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.521569, 0.521569, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 30, 30 )

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxLine" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="SettingsScene" type="Control"]
anchor_right = 0.833
anchor_bottom = 0.833
margin_right = 0.239929
margin_bottom = 0.42688
script = ExtResource( 4 )

[node name="Background" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 1066.67
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -101.5
margin_right = 187.0
margin_bottom = 101.5

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
margin_right = 374.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 374.0
margin_bottom = 79.0
custom_icons/tick = ExtResource( 7 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
value = 100.0

[node name="EffectsLabel" type="Label" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 374.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 2 )
text = "Sound Effects"

[node name="EffectsSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 374.0
margin_bottom = 162.0
custom_icons/tick = ExtResource( 7 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
value = 100.0

[node name="CreakLabel" type="Label" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 374.0
margin_bottom = 211.0
custom_fonts/font = ExtResource( 2 )
text = "Chest Creak"

[node name="CreakSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 374.0
margin_bottom = 245.0
custom_icons/tick = ExtResource( 7 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 5 )
value = 100.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.5
margin_top = 125.0
margin_right = 205.5
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="BackButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -80.0
margin_right = 75.0
margin_bottom = -20.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Exit"
align = 1
valign = 1
